[gd_scene load_steps=7 format=3 uid="uid://dupiw5pjpvulw"]

[ext_resource type="Script" path="res://scenes/house/house_inventory.gd" id="1_7w8e6"]
[ext_resource type="ButtonGroup" uid="uid://bccohgbb2f7bj" path="res://scenes/house/inven_button_group.tres" id="2_rutrm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dth2p"]
bg_color = Color(0.262745, 0.262745, 0.262745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bi312"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n017i"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50occ"]
bg_color = Color(0, 0, 0, 1)

[node name="HouseInventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7w8e6")

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="V" type="VBoxContainer" parent="M"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="submenu" type="MarginContainer" parent="M/V"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="H" type="HBoxContainer" parent="M/V/submenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="tools" type="Button" parent="M/V/submenu/H"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_dth2p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bi312")
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_rutrm")
text = " 조리 도구 "

[node name="ings" type="Button" parent="M/V/submenu/H"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_dth2p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bi312")
toggle_mode = true
button_group = ExtResource("2_rutrm")
text = " 재료/음식 "

[node name="shop" type="Button" parent="M/V/submenu/H"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_dth2p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n017i")
toggle_mode = true
button_group = ExtResource("2_rutrm")
text = " 도구 상점 "

[node name="Panel" type="Panel" parent="M/V"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_50occ")

[node name="C" type="CenterContainer" parent="M/V/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="M/V/submenu/H/tools" to="." method="_on_tools_button_down"]
[connection signal="button_down" from="M/V/submenu/H/ings" to="." method="_on_ingredients_button_down"]
[connection signal="button_down" from="M/V/submenu/H/shop" to="." method="_on_shop_button_down"]
